added link to smash

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <div class="menuItem">
                         <p>Sky Island</p>
                     </div>
-                    <div class="menuItem">
-                        <p>item3</p>
+                    <div class="menuItem" onclick="location.href = 'http://dwab.games/build/index.html'">
+                        <p>Smash</p>
                     </div>
                 </div>
             </div>
