--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     <video autoplay muted class="backgroundVideo">
         <source src="../DwabDevs.mp4" type="video/mp4">
     </video>
-    <img src="jordon/Screenshot (5.png" alt="">
+    <img src="jordon/Screenshot (5).png" alt="">
 </body>
 </html>
