--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
                     <div class="menuItem">
                         <p>Sky Island</p>
                     </div>
-                    <div class="menuItem" onclick="location.href = 'http://dwab.games/build/index.html'">
+                    <div class="menuItem" onclick="location.href = 'http://dwab.games/smash'">
                         <p>Smash</p>
+                    </div>
+                    <div class="menuItem" onclick="location.href = 'http://dwab.games/stats'">
+                        <p>Smash Stats</p>
                     </div>
                 </div>
             </div>
