--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     <div class="menuItem" onclick="location.href = 'http://dwab.games/stats'">
                         <p>Smash Stats</p>
                     </div>
+                    <div class="menuItem" onclick="location.href = 'http://dwab.games/game'">
+                        <p>Multiplayer</p>
+                    </div>
                 </div>
             </div>
         </div>
