--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>DwabDevs - Home</title>
 </head>
 <body>
+    <!--#include virtual="header.html" -->
     <div id="header">
         <div class="logo" onclick="location.href='http://dwab.games'">
             <div id="boxOuter">
@@ -47,6 +48,8 @@
             </div>
         </div>
     </div>
+
+
     <video autoplay muted class="backgroundVideo">
         <source src="../DwabDevs.mp4" type="video/mp4">
     </video>
